# podscript-pro

./: .env.example  .gitignore  CLAUDE.md  Claude Code 云端服务器运维指南.md  Dockerfile  PROMPT.md  Procfile  Python 全栈技术方案补充说明.md  README.md  claude-style-ui.html  docker-compose.yml  help.aliyun.com_zh_model-studio_qwen-asr-api-reference.md  nixpacks.toml  pyproject.toml  python_fullstack_research.md  ralph.yml  requirements-ci.txt  requirements.txt  research_notes.md  播客转写应用产品需求文档 (PRD).md
.claude/commands/: podscript-update.md
.github/workflows/: ci.yml
docs/: aliyun-setup.md  auth-payment-technical.md  deploy-github-actions.md  deploy-railway.md  vibe-kanban-workflow-guide.md  接口定义.md  架构设计.md  测试报告.md
specs/001-ui-redesign/: claude-style-ui.html  spec.md
specs/002-add-transcribe-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-supabase-and-payment/: baas-comparison.md  claude-style-ui-v3.html  data-model.md  migration.sql  plan.md  qa-review-report.md  quickstart.md  research.md  spec.md  tasks.md  testing-guide.md  zpay-testing-guide.md  如何接入 supabase 并添加积分.md  接入国内支付 z-pay.md
src/podscript_api/: main.py
src/podscript_pipeline/: __init__.py  asr.py  cos_adapter.py  download.py  formatters.py  pipeline.py  preprocess.py  storage.py  tingwu_adapter.py  whisper_adapter.py
src/podscript_shared/: __init__.py  config.py  history.py  keywords.py  logging.py  models.py  supabase.py
tests/: test_api.py  test_auth.py  test_credits.py  test_history.py  test_payment.py  test_pipeline.py  test_upload_api.py
(+22 files in other folders)
